--- a/assets/css/hallooou.css
+++ b/assets/css/hallooou.css
@@ -121,6 +121,13 @@ body {
     color: #4c4c4c; /* Can be changed via colors.css */
     background-color: #fff;
 }
+/*-------------------------BG sholud not scroll when modal will popup---------------*/
+
+body.modal-open {
+     overflow: hidden;
+   /* position:fixed;
+    width: 100%;*/
+}
 .modal-body {
     max-height: calc(100vh - 210px);
     overflow-y: auto;
@@ -128,6 +135,16 @@ body {
 .modal {
   overflow-y:auto;
 }
+.modal-open .modal{
+    z-index: 100000;
+}
+
+
+
+
+
+
+
 
 h1,
 h2,
@@ -1100,7 +1117,7 @@ ul.project-meta li a:hover{
 /* ---------------------------------------------- */
 .recent-project::before {
     content: "";
-    background: rgba(59,59,59,0.8);
+    background: rgba(59, 59, 59, 0.91);
     width: 100%;
     height: 100%;
     position: absolute;
@@ -1739,9 +1756,18 @@ footer .social a{
 
 p.skill_inner{
     font-size: 14px;
+    color: white;
+    font-weight: 600;
+    padding: 0px 8px;
+}
+span.tags_inner{
+    font-weight: bold;
+    color: white;
 }
 span.tags{
-    font-weight: bold;
+ color:rgba(254,82,76, 1);
+ font-weight: bold;
+ font-size: 1.25em;
 }
 h3.git{
     color: black;
@@ -1775,31 +1801,94 @@ textarea{
 .modal-header .close{
     outline: none;
 }
+input.apply_button{
+     margin-top: 1.5em;
+}
 button.apply_button ,input.apply_button{
        padding: .5em 1.4em;
     font-weight: 600;
     color: #fbf6f6;
     background: #fe524c;
     outline: none;
-    margin-top: 1.5em;
+   
     border: 1px solid #fe524c;
 }
+li{
+    line-height: 1.5em;
+    font-size: 1.1em;
+}
+
 textarea {
     resize: none
 }
-/*body.modal-open {
-     overflow: hidden;
-    position:fixed;
-    width: 100%;
-}*/
+button.apply_button:hover ,input.apply_button:hover{
+    border: 1px solid #fff;
+    outline: 0;
+    color: #fff;
+    background: #df514c;
+}
+.skills_req{
+    margin-bottom: 2px;
+    font-weight: 600;
+}
+.skills_req_inner{
+    font-size: 1em;
+    color:black;
+}
+::-webkit-scrollbar {
+    width: 12px;
+}
+
+::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px gray;
+}
+
+::-webkit-scrollbar-thumb {
+    -webkit-box-shadow: inset 0 0 6px black;
+    background: rgb(254, 82, 76);
+}
+
 
 
 /* 14:  MEDIA QUERIES START
 /* ---------------------------------------------- */
 
+@media(min-width:320px) {
+
+   button.details_button{
+    padding: .2em .4em;
+    position: relative;
+    left: 4em;
+   }
+   p.skill_inner{
+    font-size: 12px;
+   }
+.modal-body{
+    padding: 0;
+}
+}
+
+
+
 
 /* Media Queries [min-width:767px]
 /* ---------------------------------------------- */
+
+@media(min-width:500px) {
+
+   button.details_button{
+    padding: .5em 1.4em;
+    position: relative;
+    left: 0em;
+   }
+   p.skill_inner{
+    font-size: 14px;
+   }
+.modal-body{
+    padding: 14px;
+}
+}
+
 
 @media(min-width:767px) {
 
@@ -1992,7 +2081,6 @@ textarea {
 
 
 
-
 /* Selection and other generic styles
 /* ---------------------------------------------- */
 ::-moz-selection {
@@ -2030,3 +2118,6 @@ body {
     border:1px solid #f00;
 }
 
+.m-open,.modal-open {
+    overflow: hidden !important;
+}
