--- a/assets/css/hallooou.css
+++ b/assets/css/hallooou.css
@@ -1847,7 +1847,12 @@ button.apply_button:hover ,input.apply_button:hover{
     -webkit-box-shadow: inset 0 0 6px black;
     background: rgb(254, 82, 76);
 }
-
+body{
+    padding: 0 !important;
+}
+button.btn.btn-default.myButton.disabled{
+    color:black;
+}
 
 
 /* 14:  MEDIA QUERIES START
